@@ -1,4 +1,9 @@
-2009-06-27  Chris Morley <c.morley@gaseq.co.uk>
+2009-04-07  Michael Banck  <mbanck@gmx.net>
+
+	* src/formats/nwchemformat.cpp (ReadMolecule): Added frequencies
+	and IR intensities support.  Fixes PR#2728437.
+
+2009-04-06  Noel O'Boyle  <baoilleach@gmail.com>
 
 	* src/formats/smilesformat.cpp,
 	windows-vc2005/OBCommonFormats/OBCommonFormats.vcproj
